--- a/capstone_notebook.ipynb
+++ b/capstone_notebook.ipynb
@@ -912,6 +912,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I'll check the correlation between my features. This could be useful in determining which type of model to use."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 485,
    "metadata": {},
@@ -2496,9 +2503,9 @@
    "source": [
     "It's really cool that we have neural networks as a tool at our disposal, but this model is not performing very well. Further more, neural networks are referred to as \"black boxes,\" meaning we are unable to determine exactly which spectral features are more important for predicting the genre of a song or which parameters should be tuned in order to improve accuracy on both training and test sets. Furthermore, a neural network may be more useful for classifying genre based on spectrogram images alone, as opposed to a numerical translation of their features. A fun experiment for another time, perhaps!\n",
     "\n",
-    "For now, our dataframe is well-suited for classification using supervised learning methods. A supervised model is exceedingly more interpretable, meaning we are better able to tune our model for accuracy and better able to evaluate exactly how the model is generating predictions.\n",
+    "For now, our dataframe is well-suited for classification using ensemble methods such as a Random Forest Classifier and an ExtraTrees Classifier. These methods are more interpretable than neural networks since we can use SKLearns .feature_importances_ to determine which variables are informative in the model, their inter-tree variability and how they are ranked.\n",
     "\n",
-    "First, I'll build a random forest classifier for this task. Random forest classifiers tend to be very simple to use as they require few parameters to set. They also tend to perform very well in general. "
+    "First, I'll build a random forest classifier for this task. Random forest classifiers tend to be very simple to use as they require fewer parameters to set. They also tend to perform very well in general. "
    ]
   },
   {
